----------------------------------------------------
-Add new functions : OCT2BIN ,OCT2HEX,OCT2DEC ; HEX2BIN ,HEX2OCT,HEX2DEC ; BIN2HEX ,BIN2OCT,BIN2DEC
renamed DECBIN -> DEC2BIN  , DECHEx -> DEC2HEX , DECOCT -> DEC2OCT but there is against
compatibility with old function you can used against DECHEX, DECOCT, DECBIN

2000-11-09-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Fix bug when we copy/paste cell and row/column has layout parameters
-Bug fix

2000-11-11-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now kspread_dlg_layout works when you select an entire column/row(s)

2000-11-16-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can insert/remove multiple column/row ( select area )

2000-11-20-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can insert/remove multiple cells

2000-11-21-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can copy and insert in same time (For the moment just for column/row)

2000-11-22-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now kspread understands complex number
you can add /sub complex number
COMPLEX, IMREAL, IMAGINARY, IMSUB, IMSUM

2000-11-28-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Add new math functions IMDIV, SUMPRODUCT  , SUMX2PY2 ,    SUMX2MY2    ,  SUM2XMY

2000-12-02-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Add new functions IMCOS, IMSIN, IMPOWER, IMSQRT, IMEXP, IMLN
Add new functions ISEVEN, ISODD, ODD, EVEN, DELTA

2000-12-03-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can validate on integer